imported HtmlUnit 4.6.0